# playwright-login-suite

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TEST_PLAN.md  config.py  conftest.py  constants.py  pyproject.toml  pytest.ini  requirements.txt  session.json  storage_state.json
.github/workflows/: ci.yml
flows/: login_flow.py  logout_flow.py
locators/: __init__.py  dashboard_locators.py  login_identifier_locators.py  login_password_locators.py  shared_locators  shared_locators.py
pages/: base_page.py  dashboard_page.py  login_identifier_page.py  login_page.py  login_password_page.py
scripts/: save_auth_state.py
test_data/: __init__.py
test_data/environment/: timeouts.json  urls.json
test_data/login/: invalid_emails.json  invalid_emails.py  invalid_passwords.json  login_data.json
tests/: __init__.py  conftest.py
tests/api/: test_dashboard_requires_login.py  test_login_page_csp_header.py  test_login_page_not_cached.py  test_login_page_reachable.py  test_login_page_security_headers.py  test_static_assets_load.py
tests/api_tests/: test_auth0_discovery_endpoint.py  test_auth0_identity_reachable.py  test_http_upgrades_to_https.py  test_login_page_localisation.py  test_login_sets_secure_cookies.py
tests/environment_tests/: test_login_two_tabs.py  test_logout_in_one_tab_invalidates_other.py  test_offline_after_password_page.py  test_offline_before_password.py  test_slow_network_login.py
tests/framework/: test_locator_checks.py
tests/framework_tests/: test_locator_checks.py  (+4 more)
tools/: locator_audit.py
(+31 files in other folders)
